M5 fix: check user role after login, quote request validation after registration, small fixes

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -178,3 +178,33 @@
         </div>
     </div>
 </div>
+
+<div class="modal registration-modal fade" id="offerErrorModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-body">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="final-stage">
+                    <div class="row">
+                        <h2>Artist cannot create offer</h2>
+
+                        <p class="description">
+
+                        </p>
+                        <p class="description">
+                            And if you need any help, please do not hesitate to use the FAQ
+                        </p>
+
+                        <div class="controls">
+                            <div class="button-gradient filled">
+                                <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
