--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
@@ -6,7 +6,7 @@
 
 <div class="container no-pad">
     <section class="price-list">
-{% include 'ActedLegalDocsBundle:Profile:ordersSection.html.twig' %}
+{% include 'ActedLegalDocsBundle:Profile:ordersSectionEdit.html.twig' %}
     </section>
 {% include 'ActedLegalDocsBundle:Profile:biographySection.html.twig' %}
 
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-{% include 'ActedLegalDocsBundle:Profile:mediaSection.html.twig' %}
+{% include 'ActedLegalDocsBundle:Profile:mediaSectionEdit.html.twig' %}
 
 {% include 'ActedLegalDocsBundle:Profile:feedsSection.html.twig' %}
 
