--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -471,7 +471,7 @@ section.used-by {
 .profile-info .controls .button-gradient .btn{min-width: 176px;}
 .profile-info .controls .button-gradient:not(.filled) .btn{padding-top: 4px;}
 
-.profile-info .avatar {
+.profile-info div.avatar {
     position: relative;
     width: 213px;
     height: 213px;
@@ -483,7 +483,7 @@ section.used-by {
     overflow: hidden;
 }
 
-.profile-info .avatar img{
+.profile-info div.avatar img{
     width: 100%;
     height: auto;
     display: block;
@@ -2129,7 +2129,7 @@ section.used-by {
         display: none;
     }
 
-    .profile-info .avatar {
+    .profile-info div.avatar {
         width: 170px;
         height: 170px;
     }
@@ -2342,7 +2342,7 @@ section.used-by {
         margin-top: -110px;
     }
 
-    .profile-info .avatar {
+    .profile-info div.avatar {
         width: 130px;
         height: 130px;
     }
@@ -2654,7 +2654,7 @@ section.used-by {
     margin: 0 auto 15px!important;
     }
 
-    .profile-info .avatar {
+    .profile-info div.avatar {
         width: 70px;
         height: 70px;
         top: 50px;
@@ -2724,10 +2724,10 @@ section.used-by {
         bottom: -35px!important;
     }
 
-    .profile-info .avatar{
+    .profile-info div.avatar{
         overflow: visible;
     }
-    .profile-info .avatar img{
+    .profile-info div.avatar img{
         border-radius: 50%;
         -webkit-border-radius: 50%;
     }
@@ -2740,9 +2740,13 @@ section.used-by {
 }
 #editAvatar
 {
-    position: relative;
+    /*position: relative;
     color: #000;
-    font-size: 28px;
+    font-size: 28px;*/
+}
+#editAvatar a
+{
+    color: #fff;
 }
 .info #username
 {
@@ -2759,12 +2763,16 @@ section.used-by {
 {
     text-align: center;
 }
-#editBackground
+/*#editBackground
 {
     font-size: 35px;
     right: 20px;
     position: absolute;
     top: 70px;
+}*/
+#editBackground a
+{
+    color:#fff;
 }
 #editBiography
 {
@@ -2773,9 +2781,7 @@ section.used-by {
 }
 #editCategories
 {
-    position: absolute;
-    font-size: 20px;
-    right: 0;
+    color: #fff;
 }
 .editOffer, .deleteOffer
 {
@@ -2794,7 +2800,7 @@ section.used-by {
 {
     width: 395px;
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     background: rgba(0,0,0,0.8);
     color: #fff;
     height: 273px;
@@ -2973,7 +2979,7 @@ a.disabled {
     width: 100%;
     height: 273px;
 }
-.editingProf
+/*.editingProf
 {
     display: none;
     position: absolute;
@@ -2985,7 +2991,7 @@ a.disabled {
     padding: 0px 7px 0 10px;
     border-radius: 0 0 0 8px;
     cursor: pointer;
-}
+}*/
 .imagePerformanceChange {
     width: 100%;
     height: 100%;
@@ -3066,4 +3072,14 @@ a.disabled {
 {
     width: 100px;
     height: 100px;
+}
+.price-list .video iframe {
+    z-index: 1;
+    position: relative;
+    height: 297px;
+}
+
+.price-list .controls.add
+{
+    position: relative;
 }
