--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -453,7 +453,7 @@ section.used-by {
 .profile-info .controls .button-gradient .btn{min-width: 131px;}
 .profile-info .controls .button-gradient:not(.filled) .btn{padding-top: 4px;}
 
-.profile-info .avatar {
+.profile-info div.avatar {
     position: relative;
     width: 160px;
     height: 160px;
@@ -466,7 +466,7 @@ section.used-by {
     overflow: hidden;
 }
 
-.profile-info .avatar img{
+.profile-info div.avatar img{
     display: block;
     height: auto;
     width: 100%;
@@ -2207,7 +2207,7 @@ section.used-by {
         display: none;
     }
 
-    .profile-info .avatar {
+    .profile-info div.avatar {
         width: 128px;
         height: 128px;
     }
@@ -2422,7 +2422,7 @@ section.used-by {
         margin-top: -83px;
     }
 
-    .profile-info .avatar {
+    .profile-info div.avatar {
         width: 98px;
         height: 98px;
     }
@@ -2652,7 +2652,7 @@ section.used-by {
         margin: 0 auto 11px!important;
     }
 
-    .profile-info .avatar {
+    .profile-info div.avatar {
         width: 53px;
         height: 53px;
         top: 38px;
@@ -2733,7 +2733,7 @@ section.used-by {
     .profile-info .avatar{
         overflow: visible;
     }
-    .profile-info .avatar img{
+    .profile-info div.avatar img{
         border-radius: 50%;
         -webkit-border-radius: 50%;
     }
@@ -2879,9 +2879,12 @@ only screen and (min-resolution: 2dppx) {
 }
 #editAvatar
 {
-    position: relative;
-    color: #000;
-    font-size: 28px;
+    /*position: relative;
+    font-size: 28px;*/
+}
+#editAvatar a
+{
+    color: #fff;
 }
 .info #username
 {
@@ -2898,12 +2901,16 @@ only screen and (min-resolution: 2dppx) {
 {
     text-align: center;
 }
-#editBackground
+/*#editBackground
 {
     font-size: 35px;
     right: 20px;
     position: absolute;
     top: 70px;
+}*/
+#editBackground a
+{
+    color:#fff;
 }
 #editBiography
 {
@@ -2912,9 +2919,7 @@ only screen and (min-resolution: 2dppx) {
 }
 #editCategories
 {
-    position: absolute;
-    font-size: 20px;
-    right: 0;
+    color:#fff;
 }
 .editOffer, .deleteOffer
 {
@@ -2933,7 +2938,7 @@ only screen and (min-resolution: 2dppx) {
 {
     width: 395px;
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     background: rgba(0,0,0,0.8);
     color: #fff;
     height: 273px;
@@ -3150,7 +3155,7 @@ a.disabled {
 {
     width: 100%;
 }
-.editingProf
+/*.editingProf
 {
     display: none;
     position: absolute;
@@ -3162,7 +3167,7 @@ a.disabled {
     padding: 0px 7px 0 10px;
     border-radius: 0 0 0 8px;
     cursor: pointer;
-}
+}*/
 .imagePerformanceChange {
     width: 100%;
     height: 100%;
@@ -3243,4 +3248,13 @@ a.disabled {
 {
     width: 100px;
     height: 100px;
+}
+.price-list .video iframe {
+    z-index: 1;
+    position: relative;
+    height: 297px;
+}
+.price-list .controls.add
+{
+    position: relative;
 }
