--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -7,7 +7,7 @@
 
                     <form class="edit-form" id="{{ performance.id }}">
                         <header class="heading">
-                            <input class="pull-left title" type="text" placeholder="Please enter a name for your act" value="{{ performance.title }}">
+                            <input class="pull-left title offerTitlePerf" type="text" placeholder="Please enter a name for your act" value="{{ performance.title }}">
                             <div class="price pull-right">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</div> <!--<input class="set-price" type="text" placeholder="0,00">-->
                         </header>
 
@@ -106,11 +106,11 @@
 
                                 <div class="controls">
                                     <div class="button-gradient follow">
-                                        <button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
-                                        </button>
+                                        <!--<button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
+                                        </button>-->
                                     </div>
                                     <div class="button-gradient white blue follow">
-                                        <button type="submit" class="btn">Publish now</button>
+                                        <button type="submit" class="btn publishOfferPerf">Publish now</button>
                                     </div>
                                 </div>
                             </div>
@@ -120,10 +120,10 @@
                                 <button class="btn-option" type="button"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
                             </li>
                             <li>
-                                <button class="btn-option" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                                <button class="btn-option deleteOfferBtn" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>
                             </li>
                             <li>
-                                <button class="btn-option" type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
+                                <button class="btn-option saveOfferPerf" type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
                             </li>
                         </ul>
                     </form>
@@ -136,7 +136,7 @@
 
                     <div class="controls add">
                         <div class="button-gradient orange white follow">
-                            <button type="button" class="btn">Add new performance</button>
+                            <button type="button" class="btn" id="addNewPerformanceBtn">Add new performance</button>
                         </div>
                     </div>
 
@@ -144,7 +144,7 @@
 
                 <form class="edit-form" id="NewBlank">
                     <header class="heading">
-                        <input class="pull-left title" type="text" placeholder="Please enter a name for your act" value="">
+                        <input class="pull-left title offerTitlePerf" type="text" placeholder="Please enter a name for your act" value="">
                         <div class="price pull-right">Price: from  EUR</div> <!--<input class="set-price" type="text" placeholder="0,00">-->
                     </header>
 
@@ -154,7 +154,7 @@
                                 <ul class="btns-list">
                                     <li>
                                         <span class="hidden mediaId">NewMedia</span>
-                                        <button type="button" class="btn-add"><i class="fa fa-camera" aria-hidden="true"></i></button>
+                                        <button type="button" class="btn-add imageAddPerf"><i class="fa fa-camera" aria-hidden="true"></i></button>
                                         <em class="note">Add photo</em>
                                     </li>
                                 </ul>
@@ -175,11 +175,11 @@
 
                             <ul class="btns-list">
                                 <li>
-                                    <button type="button" class="btn-add"><i class="fa fa-film" aria-hidden="true"></i></button>
+                                    <button type="button" class="btn-add videoAddPerf"><i class="fa fa-film" aria-hidden="true"></i></button>
                                     <em class="note">Add video</em>
                                 </li>
                                 <li>
-                                    <button type="button" class="btn-add"><i class="fa fa-camera" aria-hidden="true"></i></button>
+                                    <button type="button" class="btn-add imageAddPerf"><i class="fa fa-camera" aria-hidden="true"></i></button>
                                     <em class="note">Add photo</em>
                                 </li>
                             </ul>
@@ -192,8 +192,8 @@
 
                             <div class="controls">
                                 <div class="button-gradient follow">
-                                    <button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
-                                    </button>
+                                    <!--<button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
+                                    </button>-->
                                 </div>
                                 <div class="button-gradient white blue follow">
                                     <button type="submit" class="btn">Publish now</button>
@@ -206,10 +206,10 @@
                             <button class="btn-option" type="button"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
                         </li>
                         <li>
-                            <button class="btn-option" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                            <button class="btn-option deleteOfferBtn" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>
                         </li>
                         <li>
-                            <button class="btn-option" type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
+                            <button class="btn-option saveOfferPerf" type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
                         </li>
                     </ul>
                 </form>
