style for spotlight

--- a/app/Resources/views/_layout.html.twig
+++ b/app/Resources/views/_layout.html.twig
@@ -6,30 +6,9 @@
     <meta name="viewport"
           content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-    <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/actedlegaldocs/css/bootstrap.min.css') }}" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Project name</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Profile</a></li>
-                </ul>
-                <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search...">
-                </form>
-            </div>
-        </div>
-    </nav>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 col-md-2">
@@ -40,6 +19,7 @@
             </div>
         </div>
     </div>
-    <script src="{{ asset('js/javascript.js') }}"></script>
+    <script src="{{ asset('bundles/actedlegaldocs/js/jquery.min.js') }}"></script>
+    <script src="{{ asset('bundles/actedlegaldocs/js/bootstrap.min.js') }}"></script>
 </body>
 </html>
