--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
@@ -1,3 +1,62 @@
-<h1>Admin</h1>
+{% extends '_layout.html.twig' %}
 
-{{ dump(artists) }}
+{% block body %}
+
+    <h2 class="sub-header">Spotlight</h2>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>Name</th>
+                    <th>Slug</th>
+                    <th>spotlight</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for artist in artists %}
+                <tr>
+                    <td>{{ artist.id }}</td>
+                    <td>{{ artist.name }}</td>
+                    <td>{{ artist.slug }}</td>
+                    <td>
+                        {% if artist.spotlight is defined %}
+                            {{ artist.spotlight }}
+                        {% else %}
+                            0
+                        {% endif %}
+                    </td>
+                    <td>
+                        {#{{ path('admin_manage_spotlight', {'id': artist.id }) }}#}
+                        <a href="#"><button type="button" class="btn btn-info">Manage</button></a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <nav>
+        <ul class="pagination">
+            {% if paginations['previous'] is defined %}
+                <li>
+                    <a href="{{ path('admin_dashboard_spotlight', {'page': paginations['previous']  }) }}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+            {% for pagin in range(1, paginations['pageRange']) %}
+                <li>
+                    <a href="{{ path('admin_dashboard_spotlight', {'page': pagin }) }}">{{ pagin }}</a>
+                </li>
+            {% endfor %}
+            {% if paginations['next'] is defined %}
+                <li>
+                    <a href="{{ path('admin_dashboard_spotlight', {'page': paginations['next']  }) }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+{% endblock %}
