--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -174,7 +174,13 @@
                 <article class="item clearfix addPerfomanceCreate emptyPerformance">
                     <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="" data-title="" data-placeholder="Your performance title"></span>
                         <span class="price">Price: from EUR</span>
-                        <div class="deleteOffer"><button type="button" class="btn btn-danger" data-toggle="confirmation"><i class="fa fa-trash"></i></button></div>
+                        <div class="deleteOffer"><button type="button" class="btn btn-danger" data-toggle="confirmation"
+                                                         data-btn-ok-label="Yes"
+                                                         data-btn-ok-icon="glyphicon glyphicon-share-alt"
+                                                         data-btn-ok-class="btn-success"
+                                                         data-btn-cancel-label="No"
+                                                         data-btn-cancel-icon="glyphicon glyphicon-ban-circle"
+                                                         data-btn-cancel-class="btn-danger"><i class="fa fa-trash"></i></button></div>
                     </h2>
                     <span class="performanceId hidden"></span>
 
