--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/parts/registration-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/parts/registration-retina.css
@@ -518,6 +518,127 @@
     background: white!important;
 }
 
+/*tab list styles start*/
+.registration-modal .tab-list{
+    list-style: none;
+    margin: 0;
+    padding: 10px 5px;
+    overflow: hidden;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    border-bottom: 2px solid rgba(202, 202, 202, 0.25);
+}
+
+.registration-modal .tab-list li{
+    background: transparent;
+    float: left;
+    height: 128px;
+    width: 33.33%;
+    position: relative;
+}
+
+.registration-modal .tab-list li:after{
+    content: "";
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: rgb(255, 157, 92);
+    background-image: -moz-linear-gradient(left, rgba(255, 157, 92, 1) 0%, rgba(255, 129, 66, 1) 100%);
+    background-image: -webkit-linear-gradient(left, rgba(255, 157, 92, 1) 0%, rgba(255, 129, 66, 1) 100%);
+    background-image: linear-gradient(to right, rgba(255, 157, 92, 1) 0%, rgba(255, 129, 66, 1) 100%);
+    -webkit-transition: opacity .25s;
+    -moz-transition: opacity .25s;
+    -ms-transition: opacity .25s;
+    -o-transition: opacity .25s;
+    transition: opacity .25s;
+}
+
+.registration-modal .tab-list li.active:after{
+    opacity: 1;
+}
+
+.registration-modal .tab-list li.active h3{
+    color: #fff;
+}
+
+.registration-modal .tab-list .img-box{
+    margin: 0 auto 7px;
+    width: 72px;
+    height: 72px;
+    overflow: hidden;
+}
+.registration-modal .tab-list .img-box img{
+    display: block;
+    height: auto;
+    width: 100%;
+}
+.registration-modal .tab-list  h3{
+    margin: 0;
+    font-size: 14px;
+    color: #222;
+}
+.registration-modal .tab-list a{
+    display: table;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+    z-index: 2;
+    position: relative;
+}
+.registration-modal .tab-list a:hover{
+    text-decoration: none;
+}
+.registration-modal .tab-list figure{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    overflow: hidden;
+}
+/*tab list styles end*/
+/*categories list styles start*/
+.registration-modal .categories-list{
+    overflow: hidden;
+    list-style: none;
+    margin: 0;
+    padding: 10px 0 5px;
+    color: #828282;
+    font-size: 12px;
+}
+.registration-modal .categories-list > li{
+    float: left;
+    padding: 0 5px;
+    width: 33.33%;
+}
+.registration-modal .categories-list ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.registration-modal .categories-list ul li{
+    margin: 0 0 5px;
+    position: relative;
+}
+.registration-modal .categories-list input[type="checkbox"],
+.registration-modal .categories-list input[type="radio"]{
+    display: none;
+}
+.registration-modal .categories-list label{
+    margin: 0;
+    cursor: pointer;
+}
+.registration-modal .categories-list input[type="checkbox"]:checked + label,
+.registration-modal .categories-list input[type="radio"]:checked + label{
+    color: #8BA8FF;
+}
+/*categories list styles end*/
+
 @media (max-width: 767px) {
 
 
@@ -571,9 +692,56 @@
         -o-transform: translateX(-50%);
         transform: translateX(-50%);
     }
+
+    .registration-modal .tab-list li{
+        height: 112px;
+    }
+
+    .registration-modal .tab-list .img-box{
+        height: 40px;
+        width: 46px;
+    }
+}
+
+@media (max-width: 675px){
+    .registration-modal .tab-list a{
+        padding: 13px;
+        display: block;
+    }
+    .registration-modal .tab-list figure{
+        display: block;
+    }
 }
 
 @media (max-width: 500px) {
+
+    .registration-modal .tab-list li{
+        height: 60px;
+    }
+
+    .registration-modal .tab-list a{
+        padding: 3px 5px 5px;
+        display: table;
+    }
+
+    .registration-modal .tab-list figure{
+        display: table-cell;
+    }
+
+    .registration-modal .tab-list .img-box{
+        display: none;
+    }
+
+    .registration-modal .categories-list ul li{
+        margin-bottom: 2px;
+    }
+
+    .registration-modal .tab-list li h3{
+        font-size: 12px;
+    }
+    .registration-modal .categories-list{
+        padding-top: 5px;
+    }
 
     .gradient-light,
     .gradient-dark {
