--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -7,8 +7,8 @@
 
         <div class="enquiries-wrap">
             {% for chat in chats|reverse %}
-
                 {#{% if chat.last_message %}#}
+                {% if chat.offer.event_offer[0].status == "propose" %}
             <article class="enq-block clearfix" id="{{ chat.offer.id }}">
                 <span class="received-time">
                      <i class="enq-icon icon-timing"></i> Received {{ chat.offer.event_offer[0].time_from_add }} ago
@@ -75,7 +75,79 @@
 
                 </div>
             </article>
-            {#{% endif %}#}
+            {% endif %}
+            {% endfor %}
+
+            {% for chat in chats|reverse %}
+                {#{% if chat.last_message %}#}
+                {% if chat.offer.event_offer[0].status == "reject" %}
+                    <article class="enq-block clearfix" id="{{ chat.offer.id }}">
+                <span class="received-time">
+                     <i class="enq-icon icon-timing"></i> Received {{ chat.offer.event_offer[0].time_from_add }} ago
+                </span>
+
+                        <div class="col-lg-3 no-pad">
+
+                            <ul class="act-request-data ul-reset">
+                                <li><i class="enq-icon icon-date"></i> Date: <span class="value">{{ chat.event.starting_date }}</span></li>
+                                <li><i class="enq-icon icon-timing"></i> Timing: <span class="value">
+                                {% if chat.event.timing is defined %}
+                                    {{ chat.event.timing }}
+                                {% endif %}
+                            </span></li>
+                                <li><i class="enq-icon icon-location"></i> Location: <span class="value">
+                            {% if chat.event.city.name is defined %}
+                                {{ chat.event.city.name }}
+                            {% endif %}
+                            </span></li>
+                                <li><i class="enq-icon icon-event"></i> Event: <span class="value">{{ chat.event.title }}</span></li>
+                                <li><i class="enq-icon icon-client"></i> Client: <span class="value">{{ chat.event.user.firstname }}</span>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <div class="col-lg-9 act-request">
+
+                            <p class="act-request-title">
+                                Act request: <span class="bold-title">
+                            {% for chatOffer in chat.offer.performances %}
+                                {{ chatOffer.title }},
+                            {% endfor %}
+                        </span>
+                                <!--<span class="see-more">(<a href="#">See more</a>)</span>-->
+                            </p>
+
+                            <p class="act-request-message" data-max-chars-desktop="150" data-max-chars-mobile="70">
+                                <span class="title">Message from client:</span>
+
+                        <span class="text">
+                            {%  if chat.offer.comments is defined %}
+                                {{ chat.offer.comments }}
+                            {% else %}
+                                There's no message from client.
+                            {% endif %}
+                        </span>
+                                <a class="show-more-btn" href="#">+more</a>
+                            </p>
+
+                            <div class="controls">
+                                <div class="button-gradient filled">
+                                    <button type="button" class="btn register">Send Quotation</button>
+                                </div>
+
+
+                                <div class="button-gradient filled blue">
+                                    <button type="button" class="btn register"><a href="/dashboard/chat/{{ chat.chat_id }}">Send Message</a></button>
+                                </div>
+
+                                <div class="button-gradient">
+                                    <button type="button" class="btn register rejectRequest" disabled>Not available</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </article>
+                {% endif %}
             {% endfor %}
         </div>
 
