--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/parts/enquiries-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/parts/enquiries-retina.css
@@ -174,6 +174,58 @@
     padding: 0 15px;
 }
 
+/*booking styles start*/
+.bookings .categories-menu:after{
+    content: none;
+}
+.bookings .note{
+    font-family: LatoRegular;
+    font-size: 11px;
+    color: rgba(0, 0, 0, 0.68);
+    position: absolute;
+    right: 0;
+    font-style: normal;
+    letter-spacing: 0;
+}
+.bookings .note.green b{color: #489442;}
+.bookings .note.blue b{color: #494fc7;}
+.bookings .note.orange b{color: #ff735a;}
+.act-request-list{
+    margin: 0;
+    font-size: 11px;
+    color: #000;
+    color: rgba(0, 0, 0, 0.68);
+}
+.act-request-list dt{
+    float: left;
+    margin: 0 5px 0 0;
+    font-weight: normal;
+    min-width: 48px;
+    max-width: 100px;
+}
+.act-request-list dd{
+    overflow: hidden;
+    margin: 0 0 8px;
+}
+.act-request-list ul{
+    list-style: none;
+    margin: 0;
+    padding: 0 160px 0 0;
+}
+.act-request-list ul li{
+    margin: 0 0 10px;
+}
+.act-request-list ul li:last-child{margin: 0;}
+.act-request-list .bold{
+    color: rgba(0, 0, 0, 1);
+    font-weight: normal;
+    font-family: LatoBold;
+}
+.bookings .act-request .controls{text-align: left;}
+.bookings .act-request .button-gradient{margin: 0 40px 0 0 !important;}
+.bookings .select2{margin: 0 0 30px;}
+/*booking styles end*/
+
 @media (max-width: 767px) {
     .act-request .controls .button-gradient:not(:last-of-type) {
         margin-bottom: 11px!important;
@@ -207,4 +259,23 @@
     .act-request-message span.text {
         font-size: 11px;
     }
+    .bookings .select2 .select2-selection__rendered,
+    #select2-booking-results{
+        font-size: 11px !important;
+    }
+
+    .bookings .act-request{padding: 0 0 85px;}
+    .bookings .act-request .controls{text-align: center;}
+    .bookings .act-request .controls .btn{min-width: 150px;}
+    .bookings .act-request .button-gradient{margin: 0 20px !important;}
+
+    .act-request-list dt{
+        float: none;
+        max-width: 100%;
+        min-width: 100%;
+        margin: 0 0 4px;
+    }
+    .act-request-list ul{padding: 0;}
+    .act-request-list ul li{margin: 0 0 4px;}
+    .act-request-list dd{margin: 0 0 15px;}
 }
