--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -84,7 +84,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     {% if app.user %}
-                    <li class="bookings"><a href="#">My bookings
+                    <li class="bookings"><a href="/dashboard/bookings/{{ app.user.id }}">My bookings
                             <div class="underline">
                                 <div class="top"></div>
                                 <div class="bottom"></div>
