Not available button fix

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -60,7 +60,7 @@
 
                     <div class="controls">
                         <div class="button-gradient filled">
-                            <button type="button" class="btn register">Send Quotation</button>
+                            <button type="button" class="btn register quotationSendbtn">Send Quotation</button>
                         </div>
 
 
@@ -132,7 +132,7 @@
 
                             <div class="controls">
                                 <div class="button-gradient filled">
-                                    <button type="button" class="btn register">Send Quotation</button>
+                                    <button type="button" class="btn register quotationSendbtn" disabled>Send Quotation</button>
                                 </div>
 
 
@@ -141,7 +141,7 @@
                                 </div>
 
                                 <div class="button-gradient">
-                                    <button type="button" class="btn register rejectRequest" disabled>Not available</button>
+                                    <button type="button" class="btn register rejectRequest" disabled>Rejected</button>
                                 </div>
                             </div>
 
