--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -4173,9 +4173,11 @@ header.small .navbar {
     margin: 0;
     padding: 0;
     display: -webkit-box;
+    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-bottom: 40px;
@@ -4731,6 +4733,7 @@ header.small .navbar {
     .categories-menu {
         display: block;
         -webkit-box-pack: inherit;
+        -webkit-justify-content: inherit;
             -ms-flex-pack: inherit;
                 justify-content: inherit;
     }
